--- a/products/platingcoating/zincplating/index.html
+++ b/products/platingcoating/zincplating/index.html
@@ -19,7 +19,7 @@
   <meta property="og:title" content="น้ำยาชุบสังกะสี (Zinc Plating Solutions) | Baume Chemical">
   <meta property="og:description" content="Cyanide / Acid (Ammonium) / Non-Cyanide สำหรับงานถังแขวนและถังกลิ้ง เงาดี กระจายผิวเยี่ยม ทนการกัดกร่อน.">
   <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/zincplating/">
-  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-8.jpg
+  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-8.jpg">
   <meta property="og:image:alt" content="Zinc plating bath with bright finish">
   <meta name="twitter:card" content="summary_large_image">
 
@@ -82,15 +82,66 @@
     :root{
       --brand:#2c5e4e; --brand-2:#387b5b; --accent:#ff9800; --ink:#0f172a; --muted:#5b6775;
       --bg:#f4f6f5; --card:#fff; --radius:14px; --shadow-1:0 8px 26px rgba(2,8,20,.06); --shadow-2:0 16px 40px rgba(2,8,20,.14);
-      --logo-url:url('https://img2.pic.in.th/pic/Baume.jpg');
+      --logo-url:url('https://img2.pic.in.th/pic/Baume.jpg'); --header-h:64px;
     }
     *{box-sizing:border-box}
     html,body{margin:0}
     body{background:var(--bg);color:var(--ink);font-family:'Noto Sans Thai',system-ui,sans-serif;line-height:1.65}
 
+    /* === Site Header (overlay on hero) === */
+    .site-header{
+      position:absolute; top:0; left:0; right:0; z-index:1400;
+      background:linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,0));
+      border-bottom:1px solid rgba(255,255,255,.14);
+    }
+    .site-header .header-inner{
+      max-width:1200px; margin:0 auto;
+      display:flex; align-items:center; justify-content:space-between;
+      min-height:var(--header-h); padding:10px 16px;
+    }
+    .brand{display:flex; align-items:center; gap:10px; text-decoration:none}
+    .brand-logo{
+      width:42px;height:42px;border-radius:10px;flex:0 0 42px;
+      background:#e8f1ec var(--logo-url) center/cover no-repeat;
+      box-shadow:0 2px 8px rgba(2,8,20,.15)
+    }
+    .brand-name{font-weight:800; color:#fff; font-size:1.02rem; letter-spacing:.2px}
+    .primary-nav{display:flex; align-items:center; gap:12px}
+    .menu{list-style:none; display:flex; gap:8px; margin:0; padding:0}
+    .menu a{
+      display:inline-block; padding:10px 12px; border-radius:10px;
+      color:#fff; text-decoration:none; font-weight:600;
+    }
+    .menu a:hover{ background:rgba(255,255,255,.12); color:#fff }
+    .menu a[aria-current="page"]{ background:rgba(255,255,255,.18); color:#fff; box-shadow:none }
+    .menu a.cta{ border:1px solid rgba(255,255,255,.35) }
+    .menu a.cta:hover{ background:#fff; color:#0f172a; border-color:#fff }
+    .nav-toggle{
+      appearance:none; border:0; background:transparent; cursor:pointer;
+      width:38px; height:38px; border-radius:9px; display:none; align-items:center; justify-content:center;
+    }
+    .nav-toggle:focus-visible{ outline:2px solid #ffffff; outline-offset:2px }
+    .nav-toggle .bar{ position:relative; width:22px; height:2px; background:#fff; border-radius:2px }
+    .nav-toggle .bar::before,.nav-toggle .bar::after{
+      content:""; position:absolute; left:0; right:0; height:2px; background:#fff; border-radius:2px
+    }
+    .nav-toggle .bar::before{ top:-7px } .nav-toggle .bar::after{ top:7px }
+    @media (max-width: 920px){
+      .menu{
+        position:fixed; left:12px; right:12px; top:calc(var(--header-h) + 8px);
+        background:#0f172acc; backdrop-filter: blur(8px);
+        border:1px solid rgba(255,255,255,.18); border-radius:14px;
+        transform:translateY(-12px); opacity:0; pointer-events:none;
+        display:grid; gap:6px; padding:12px; transition:transform .2s ease, opacity .2s ease;
+      }
+      .menu li a{ display:block; padding:12px 14px; border-radius:10px }
+      .site-header.open .menu{ transform:none; opacity:1; pointer-events:auto }
+      .nav-toggle{ display:inline-flex }
+    }
+
     /* === Floating Language Switcher === */
     .lang-fab{
-      position:fixed; top:14px; right:14px; z-index:1100; display:flex; gap:6px;
+      position:fixed; top: calc(var(--header-h) + 10px); right:14px; z-index:1100; display:flex; gap:6px;
       padding:4px; border:1px solid #e2e8f0; border-radius:999px; background:#ffffffcc; backdrop-filter: blur(8px);
       box-shadow:0 10px 26px rgba(2,8,20,.12);
     }
@@ -104,12 +155,42 @@
     /* === Hero === */
     .hero{
       position:relative; overflow:hidden; display:grid; place-items:center; text-align:center; color:#fff;
-      min-height: clamp(420px, 60vh, 640px);
-      background: linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55)), url('https://img5.pic.in.th/file/secure-sv1/thumbnail-8.jpg') center/cover no-repeat;
+      min-height: clamp(480px, 66vh, 740px);
+      background: linear-gradient(180deg, rgba(0,0,0,.45), rgba(0,0,0,.65)), url('https://img5.pic.in.th/file/secure-sv1/thumbnail-8.jpg') center/cover no-repeat;
       padding:22px 16px;
     }
-    .hero h1{margin:0 0 10px; font-weight:800; font-size:clamp(26px,4.2vw,46px); text-shadow:0 6px 28px rgba(0,0,0,.45)}
-    .hero p{max-width:980px; margin:0 auto; color:#e6f2ef}
+    .hero-inner{position:relative; z-index:1}
+    .hero h1{margin:0 0 10px; font-weight:800; font-size:clamp(28px,4.4vw,48px); text-shadow:0 6px 28px rgba(0,0,0,.45)}
+    .hero p{max-width:980px; margin:0 auto 14px; color:#e6f2ef}
+    .actions{display:flex; gap:10px; justify-content:center; flex-wrap:wrap; margin-top:10px}
+    .btn{appearance:none; border:1px solid var(--brand); background:var(--accent); color:#1b2637; padding:10px 14px; border-radius:12px; font-weight:800; text-decoration:none}
+    .btn.ghost{background:transparent; border-color:#fff; color:#fff}
+    .btn:hover{filter:brightness(.95)}
+
+    /* Back button (top-left over hero) */
+    .back-wrap{
+      position:absolute; left:16px; top:calc(var(--header-h) + 12px); z-index:2;
+      display:flex; align-items:center; gap:8px;
+    }
+    .btn.back{
+      display:inline-flex; align-items:center; gap:8px;
+      background:#ffffff22; border:1px solid rgba(255,255,255,.55); color:#fff;
+      padding:8px 12px; border-radius:12px; font-weight:800; text-decoration:none; backdrop-filter: blur(6px);
+    }
+    .btn.back:hover{ background:#ffffff33 }
+    .btn.back svg{width:18px; height:18px; display:block}
+
+    /* Nice bullets in hero */
+    .bullets{display:flex; gap:10px; justify-content:center; flex-wrap:wrap; margin-top:12px}
+    .bullet{
+      display:inline-flex; align-items:center; gap:8px; padding:8px 12px;
+      border:1px solid rgba(255,255,255,.5); border-radius:999px; background:rgba(255,255,255,.12);
+      font-weight:600; color:#eaf4f2; backdrop-filter: blur(6px);
+    }
+    .bullet .icon{
+      display:grid; place-items:center; width:22px; height:22px; border-radius:999px;
+      background:#fff; color:#0f172a; font-weight:800; font-size:12px;
+    }
 
     /* === Layout === */
     .wrap{max-width:1200px;margin:auto;padding:34px 16px}
@@ -155,6 +236,32 @@
 </head>
 <body>
 
+  <!-- === Site Header (Top Navigation) === -->
+  <header class="site-header" role="banner">
+    <div class="header-inner">
+      <!-- Brand -->
+      <a class="brand" href="/" aria-label="Baume Chemical">
+        <span class="brand-logo" aria-hidden="true"></span>
+        <span class="brand-name">Baume Chemical</span>
+      </a>
+
+      <!-- Hamburger (mobile) -->
+      <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+        <span class="bar" aria-hidden="true"></span>
+      </button>
+
+      <!-- Primary Navigation -->
+      <nav class="primary-nav" aria-label="Primary">
+        <ul class="menu">
+          <li><a href="https://www.baumechemical.com/" class="nav-link">Home</a></li>
+          <li><a href="https://www.baumechemical.com/about-us/" class="nav-link">About us</a></li>
+          <li><a href="https://www.baumechemical.com/products/" class="nav-link" aria-current="page">Products</a></li>
+          <li><a href="https://www.baumechemical.com/contact-us/" class="nav-link">Contact Us</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
   <!-- === Language Switcher === -->
   <div class="lang-fab" role="group" aria-label="Language switcher">
     <button class="lang-btn" data-lang="th" aria-pressed="true" title="ภาษาไทย">
@@ -168,10 +275,41 @@
   </div>
 
   <!-- === Hero === -->
-  <header class="hero">
-    <div class="wrap" style="padding:22px 16px">
+  <header class="hero" aria-label="Zinc Plating Hero">
+    <!-- Back button -->
+    <div class="back-wrap">
+      <a href="https://www.baumechemical.com/products/platingcoating/index.html" class="btn back" id="backBtn">
+        <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
+          <path d="M15 18l-6-6 6-6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        <span data-i18n-key="btn_back">ย้อนกลับ</span>
+      </a>
+    </div>
+
+    <div class="hero-inner wrap" style="padding:22px 16px">
       <h1 data-i18n-key="hero_title">Zinc Plating Solution</h1>
       <p data-i18n-key="hero_tagline">โซลูชันชุบสังกะสีสำหรับงานอุตสาหกรรม ครอบคลุมระบบไซยาไนด์ กรดแอมโมเนียม และแบบไร้ไซยาไนด์ เหมาะกับถังกลิ้ง/ถังแขวน เน้นความเงา การกระจายตัว และความทนการกัดกร่อน พร้อมทีมเทคนิคดูแลหน้างาน</p>
+
+      <!-- Pretty bullets (3 items) -->
+      <div class="bullets" aria-label="Key highlights">
+        <div class="bullet">
+          <span class="icon">✓</span>
+          <span data-i18n-key="b1">เงาสูง กระจายผิวกว้าง</span>
+        </div>
+        <div class="bullet">
+          <span class="icon">✓</span>
+          <span data-i18n-key="b2">รองรับ Rack/Barrel</span>
+        </div>
+        <div class="bullet">
+          <span class="icon">✓</span>
+          <span data-i18n-key="b3">เลือกได้ CYA/Acid/NCN</span>
+        </div>
+      </div>
+
+      <div class="actions">
+        <a class="btn" href="products.html" data-i18n-key="btn_products">ดูหมวดผลิตภัณฑ์</a>
+        <a class="btn ghost" href="https://www.baumechemical.com/contact-us/" data-i18n-key="btn_consult">ปรึกษาทีมเทคนิค</a>
+      </div>
     </div>
   </header>
 
@@ -207,14 +345,14 @@
           </div>
         </article>
 
-        <!-- Non‑Cyanide -->
+        <!-- Non-Cyanide -->
         <article id="non-cyanide" class="card lift">
           <picture>
-            <img src="https://img2.pic.in.th/pic/thumbnail-7.jpg" alt="Cyanide‑free zinc plating – safer, bright, NaOH/KOH compatible">
+            <img src="https://img2.pic.in.th/pic/thumbnail-7.jpg" alt="Cyanide-free zinc plating – safer, bright, NaOH/KOH compatible">
           </picture>
           <div class="body">
-            <div class="badges"><span class="badge">Non‑Cyanide</span><span class="badge">NaOH / KOH</span></div>
-            <h3 data-i18n-key="ncn_title">Cyanide‑Free Zinc Plating</h3>
+            <div class="badges"><span class="badge">Non-Cyanide</span><span class="badge">NaOH / KOH</span></div>
+            <h3 data-i18n-key="ncn_title">Cyanide-Free Zinc Plating</h3>
             <p data-i18n-key="ncn_desc">ปลอดไซยาไนด์ ลดความเสี่ยงต่อคนและสิ่งแวดล้อม เงาสูง คุมง่าย กระจายผิวดี ใช้ได้กับ NaOH/KOH และชุบได้โดยตรงบนเหล็ก เหล็กผสมตะกั่ว หรือซิงค์ไดคาสต์</p>
             <a class="more" href="troubleshootingnoncyanidezinc/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
@@ -312,20 +450,55 @@
     </div>
   </footer>
 
-  <!-- === i18n === -->
+  <!-- === JS: nav-toggle + back + i18n === -->
   <script>
+    // --- Mobile nav toggle ---
+    (function(){
+      var header = document.querySelector('.site-header');
+      var toggle = document.querySelector('.site-header .nav-toggle');
+      if(!header || !toggle) return;
+      toggle.addEventListener('click', function(){
+        var opened = header.classList.toggle('open');
+        toggle.setAttribute('aria-expanded', String(opened));
+      });
+    })();
+
+    // --- Back button ---
+    (function(){
+      const btn = document.getElementById('backBtn');
+      if(!btn) return;
+      btn.addEventListener('click', function(e){
+        e.preventDefault();
+        try{
+          const ref = document.referrer;
+          const sameOrigin = ref && new URL(ref).origin === location.origin;
+          if(sameOrigin) { history.back(); return; }
+        }catch(e){}
+        // Fallback: go to parent directory (products/platingcoating/)
+        const parent = location.pathname.replace(/[^\/]+\/?$/, '');
+        location.href = parent || '/products/platingcoating/';
+      });
+    })();
+
+    // --- i18n ---
     const I18N = {
       th:{
         meta_title:"น้ำยาชุบสังกะสี (Zinc Plating Solutions) | Baume Chemical",
         hero_title:"Zinc Plating Solution",
         hero_tagline:"โซลูชันชุบสังกะสีสำหรับงานอุตสาหกรรม ครอบคลุมระบบไซยาไนด์ กรดแอมโมเนียม และแบบไร้ไซยาไนด์ เหมาะกับถังกลิ้ง/ถังแขวน เน้นความเงา การกระจายตัว และความทนการกัดกร่อน พร้อมทีมเทคนิคดูแลหน้างาน",
+        btn_products:"ดูหมวดผลิตภัณฑ์",
+        btn_consult:"ปรึกษาทีมเทคนิค",
+        btn_back:"ย้อนกลับ",
+        b1:"เงาสูง กระจายผิวกว้าง",
+        b2:"รองรับ Rack/Barrel",
+        b3:"เลือกได้ CYA/Acid/NCN",
         sec_products:"ผลิตภัณฑ์ในกลุ่มนี้",
         sec_products_lead:"การเลือกสูตรที่เหมาะสมกับงาน ไม่ว่าจะเป็นสูตรไซยาไนด์ กรดแอมโมเนียม หรือสูตรไร้ไซยาไนด์ ล้วนช่วยมอบความเงางาม การกระจายตัวที่สม่ำเสมอ และความทนทานต่อการกัดกร่อน พร้อมทั้งควบคุมต้นทุนให้คุ้มค่า",
         cya_title:"Cyanide Zinc Plating Solution",
         cya_desc:"การกระจายผิวยอดเยี่ยม คุมง่าย ทนต่อการปนเปื้อนน้ำมัน เงาสูง ทำงานได้ในช่วงความหนาแน่นกระแสกว้าง และเข้ากันได้กับโครเมตทุกเฉด เหมาะทั้งถังแขวนและถังกลิ้ง",
         acid_title:"Ammonium Acid Zinc Plating",
         acid_desc:"กระจายผิวดีแม้พื้นที่กระแสต่ำ/ซอกลึก เบสและไบร์ทเทนเนอร์ละลายง่าย ล้างออกง่าย ช่วยให้โครเมตยึดติดดี ให้ผิวเงาและความหนาสม่ำเสมอ เหมาะกับถังกลิ้ง/ถังแขวน",
-        ncn_title:"Cyanide‑Free Zinc Plating",
+        ncn_title:"Cyanide-Free Zinc Plating",
         ncn_desc:"ปลอดไซยาไนด์ ลดความเสี่ยงต่อคนและสิ่งแวดล้อม เงาสูง คุมง่าย กระจายผิวดี ใช้ได้กับโซดาไฟและโพแทสเซียม และชุบได้โดยตรงบนเหล็ก เหล็กผสมตะกั่ว หรือซิงค์ไดคาสต์",
         btn_details:"ดูรายละเอียด →",
         tbl_type:"ประเภท", tbl_materials:"วัสดุที่เหมาะสม", tbl_features:"จุดเด่น", tbl_app:"การใช้งาน", tbl_notes:"หมายเหตุ",
@@ -340,21 +513,27 @@
       en:{
         meta_title:"Zinc Plating Solutions | Baume Chemical",
         hero_title:"Zinc Plating Solution",
-        hero_tagline:"Industrial zinc plating solutions covering Cyanide, Ammonium Acid, and Cyanide‑Free systems for rack/barrel lines—bright finishes, strong distribution, and corrosion resistance.",
+        hero_tagline:"Industrial zinc plating solutions covering Cyanide, Ammonium Acid, and Cyanide-Free systems for rack/barrel lines—bright finishes, strong distribution, and corrosion resistance.",
+        btn_products:"Browse Products",
+        btn_consult:"Talk to a Specialist",
+        btn_back:"Back",
+        b1:"High gloss, wide throwing",
+        b2:"Works with Rack/Barrel",
+        b3:"Pick CYA / Acid / NCN",
         sec_products:"Products in this group",
-        sec_products_lead:"Select the right formula: Cyanide / Ammonium Acid / Non‑Cyanide for brightness, distribution uniformity, and corrosion resistance at optimal cost.",
+        sec_products_lead:"Select the right formula: Cyanide / Ammonium Acid / Non-Cyanide for brightness, distribution uniformity, and corrosion resistance at optimal cost.",
         cya_title:"Cyanide Zinc Plating Solution",
-        cya_desc:"Excellent distribution, easy control, oil‑contamination tolerant, high gloss, wide current density window; compatible with all chromate colors.",
+        cya_desc:"Excellent distribution, easy control, oil-contamination tolerant, high gloss, wide current density window; compatible with all chromate colors.",
         acid_title:"Ammonium Acid Zinc Plating",
-        acid_desc:"Strong coverage into low‑current areas and recesses; base/brightener dissolve and rinse easily; promotes chromate adhesion; suitable for rack/barrel.",
-        ncn_title:"Cyanide‑Free Zinc Plating",
-        ncn_desc:"Cyanide‑free for safer operations and environment; high gloss, easy control, good distribution; works with NaOH/KOH; plates directly on steel, leaded steel, and die‑cast zinc.",
+        acid_desc:"Strong coverage into low-current areas and recesses; base/brightener dissolve and rinse easily; promotes chromate adhesion; suitable for rack/barrel.",
+        ncn_title:"Cyanide-Free Zinc Plating",
+        ncn_desc:"Cyanide-free for safer operations and environment; high gloss, easy control, good distribution; works with NaOH/KOH; plates directly on steel, leaded steel, and die-cast zinc.",
         btn_details:"View details →",
         tbl_type:"Type", tbl_materials:"Suitable materials", tbl_features:"Key features", tbl_app:"Application", tbl_notes:"Notes",
         row_cya_type:"Cyanide", row_cya_mat:"Steel, alloy steel, complex parts", row_cya_feat:"Wide throwing power, oil tolerant, high gloss", row_cya_app:"Rack / Barrel", row_cya_note:"Wide current range; all chromate colors",
-        row_acid_type:"Ammonium Acid", row_acid_mat:"Hot‑rolled steel, carbo‑nitrided steel, die‑cast zinc", row_acid_feat:"Covers low‑current/recess areas; dissolves/rinses easily", row_acid_app:"Rack / Barrel", row_acid_note:"Improves chromate adhesion",
-        row_ncn_type:"Non‑Cyanide", row_ncn_mat:"Steel, leaded steel, die‑cast zinc", row_ncn_feat:"Cyanide‑free, high gloss, easy control, NaOH/KOH compatible", row_ncn_app:"Rack / Barrel", row_ncn_note:"NaOH ~1.3× deposition rate vs KOH at equal Zn metal",
-        tbl_footnote:"Note: Operating parameters (temperature/time/concentration) must be set by on‑site trials and your line standards.",
+        row_acid_type:"Ammonium Acid", row_acid_mat:"Hot-rolled steel, carbo-nitrided steel, die-cast zinc", row_acid_feat:"Covers low-current/recess areas; dissolves/rinses easily", row_acid_app:"Rack / Barrel", row_acid_note:"Improves chromate adhesion",
+        row_ncn_type:"Non-Cyanide", row_ncn_mat:"Steel, leaded steel, die-cast zinc", row_ncn_feat:"Cyanide-free, high gloss, easy control, NaOH/KOH compatible", row_ncn_app:"Rack / Barrel", row_ncn_note:"NaOH ~1.3× deposition rate vs KOH at equal Zn metal",
+        tbl_footnote:"Note: Operating parameters (temperature/time/concentration) must be set by on-site trials and your line standards.",
         footer_products:"Products",
         footer_contact:"Contact Us",
         footer_copy:"© 2025 Baume Chemical. All rights reserved."
