--- a/products/passivation/yellow-6-passivation-on-zinc.html
+++ b/products/passivation/yellow-6-passivation-on-zinc.html
@@ -4,17 +4,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
+  <!-- === SEO (i18n-ready) === -->
   <title data-i18n-key="meta_title">Chromate 5006 • สีรุ้งน้ำ โครม 6 | Baume Chemical</title>
   <meta name="description" content="สีรุ้งน้ำโครม 6 สำหรับงานซิงค์ ปรับความเข้มง่าย pH 1.5–2.0 จุ่ม 10–20 วินาที อุณหภูมิห้อง พร้อมตัวอย่างการผสม 100 ลิตร และแนวทางแก้ปัญหา" />
   <meta name="theme-color" content="#2c5e4e">
   <meta name="robots" content="index,follow,max-image-preview:large">
+  <link rel="canonical" href="http://baumechemical.com/products/passivation/yellow-6-passivation-on-zinc.html">
+  <link rel="alternate" hreflang="th" href="http://baumechemical.com/products/passivation/yellow-6-passivation-on-zinc.html">
+  <link rel="alternate" hreflang="en" href="http://baumechemical.com/products/passivation/yellow-6-passivation-on-zinc.html">
+  <link rel="alternate" hreflang="x-default" href="http://baumechemical.com/products/passivation/yellow-6-passivation-on-zinc.html">
+
+  <!-- Open Graph -->
   <meta property="og:type" content="product">
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="Chromate 5006 • Iridescent Hex-Chrome">
   <meta property="og:description" content="Cr(VI) iridescent chromate on zinc. pH 1.5–2.0; 10–20 s at room temperature; easy tone control.">
+  <meta property="og:url" content="http://baumechemical.com/products/passivation/yellow-6-passivation-on-zinc.html">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/image36c92f06ecf965146.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
@@ -24,36 +33,68 @@
     :root{
       --brand:#2c5e4e; --brand-2:#387b5b; --ink:#0f172a; --muted:#5b6775;
       --bg:#d5e4d9; --card:#fff; --radius:14px; --shadow:0 8px 26px rgba(2,8,20,.06);
-      --logo-url:url('https://img2.pic.in.th/pic/Baume.jpg'); /* โลโก้ footer */
+      --logo-url:url('https://img2.pic.in.th/pic/Baume.jpg');
+      --container:1200px; --header-h:64px;
     }
     *{box-sizing:border-box}
     html,body{margin:0}
     body{background:var(--bg);color:var(--ink);font-family:'Noto Sans Thai',system-ui,sans-serif;line-height:1.7}
 
-    /* Language FAB */
-    .lang-fab{
-      position:fixed; top:14px; right:14px; z-index:1100; display:flex; gap:6px;
-      padding:4px; border:1px solid #e2e8f0; border-radius:999px; background:#ffffffcc; backdrop-filter: blur(8px);
-      box-shadow:0 10px 26px rgba(2,8,20,.12);
-    }
-    .lang-fab .lang-btn{
-      appearance:none; border:0; background:transparent; cursor:pointer; padding:6px 10px; border-radius:999px;
-      font-weight:800; display:flex; align-items:center; gap:6px; color:#0f172a;
-    }
-    .lang-fab .lang-btn[aria-pressed="true"]{ background:var(--brand-2); color:#fff }
-    .flag{ width:20px; height:15px; border-radius:2px; object-fit:cover; box-shadow:0 0 0 1px rgba(0,0,0,.08) }
+    /* ===== Header: fixed glass (MATCH TEMPLATE) ===== */
+    .site-header{position:fixed;inset:0 0 auto 0;z-index:1400;background:transparent;border-bottom:1px solid rgba(255,255,255,.14);transition:background .2s ease,backdrop-filter .2s ease,box-shadow .2s ease}
+    .site-header.scrolled{background:rgba(15,23,42,.70);backdrop-filter:saturate(140%) blur(10px);box-shadow:0 8px 26px rgba(2,8,20,.18)}
+    .header-inner{max-width:var(--container);margin:0 auto;display:flex;align-items:center;justify-content:space-between;gap:12px;min-height:var(--header-h);padding:10px 16px}
+    .brand{display:flex;align-items:center;gap:10px;text-decoration:none}
+    .brand-logo{width:42px;height:42px;border-radius:10px;flex:0 0 42px;background:#e8f1ec var(--logo-url) center/cover no-repeat;box-shadow:0 2px 8px rgba(2,8,20,.15)}
+    .brand-name{font-weight:800;color:#fff;font-size:1.02rem;letter-spacing:.2px}
+    .header-right{display:flex;align-items:center;gap:10px}
 
-    /* HERO (HEADER IMAGE) */
-    .hero{
-      position:relative; display:grid; place-items:center; text-align:center; color:#fff;
-      min-height: clamp(360px, 58svh, 620px);
-      background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55)),
-                 url('https://img5.pic.in.th/file/secure-sv1/image36c92f06ecf965146.jpeg') center/cover no-repeat; /* รูป header */
+    .primary-nav{display:flex;align-items:center;gap:12px}
+    .menu{list-style:none;display:flex;gap:8px;margin:0;padding:0}
+    .menu a{display:inline-block;padding:10px 12px;border-radius:10px;color:#fff;text-decoration:none;font-weight:600}
+    .menu a:hover{background:rgba(255,255,255,.12)}
+    .menu a[aria-current="page"]{background:rgba(255,255,255,.18)}
+    .menu a.cta{border:1px solid rgba(255,255,255,.35)}
+    .menu a.cta:hover{background:#fff;color:#0f172a;border-color:#fff}
+
+    .nav-toggle{appearance:none;border:0;background:transparent;cursor:pointer;width:38px;height:38px;border-radius:9px;display:none;align-items:center;justify-content:center}
+    .nav-toggle .bar{position:relative;width:22px;height:2px;background:#fff;border-radius:2px}
+    .nav-toggle .bar::before,.nav-toggle .bar::after{content:"";position:absolute;left:0;right:0;height:2px;background:#fff;border-radius:2px}
+    .nav-toggle .bar::before{top:-7px}.nav-toggle .bar::after{top:7px}
+    .nav-toggle:focus-visible{outline:2px solid #fff;outline-offset:2px}
+
+    @media (max-width:920px){
+      .menu{position:fixed;left:12px;right:12px;top:calc(var(--header-h) + 8px);background:#0f172acc;backdrop-filter: blur(8px);border:1px solid rgba(255,255,255,.18);border-radius:14px;transform:translateY(-12px);opacity:0;pointer-events:none;display:grid;gap:6px;padding:12px;transition:transform .2s ease,opacity .2s ease;z-index:1400}
+      .menu li a{display:block;padding:12px 14px;border-radius:10px}
+      .site-header.open .menu{transform:none;opacity:1;pointer-events:auto}
+      .nav-toggle{display:inline-flex}
     }
+    .menu-scrim{position:fixed;inset:0;background:rgba(2,8,20,.28);z-index:1300;display:none}
+    .menu-scrim:not([hidden]){display:block}
+    body.no-scroll{position:fixed;width:100%}
+
+    /* Language switchers (header + FAB) */
+    .lang-switch,.lang-fab{display:flex;gap:6px;padding:4px;border:1px solid #e2e8f0;border-radius:999px;background:#ffffffcc;backdrop-filter: blur(8px);box-shadow:0 10px 26px rgba(2,8,20,.12)}
+    .site-header.scrolled .lang-switch{background:#ffffffdd}
+    .lang-fab{position:fixed;top:calc(var(--header-h) + 10px);right:14px;z-index:1100}
+    .lang-btn{appearance:none;border:0;background:transparent;cursor:pointer;padding:6px 10px;border-radius:999px;font-weight:800;display:flex;align-items:center;gap:6px;color:#0f172a}
+    .lang-btn[aria-pressed="true"]{background:var(--brand-2);color:#fff}
+    .flag{width:18px;height:14px;border-radius:2px;object-fit:cover;box-shadow:0 0 0 1px rgba(0,0,0,.08)}
+
+    /* HERO */
+    .hero{
+      position:relative;display:grid;place-items:center;text-align:center;color:#fff;
+      min-height: clamp(360px, 58svh, 620px); padding-top:var(--header-h);
+      background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55)),
+                 url('https://img5.pic.in.th/file/secure-sv1/image36c92f06ecf965146.jpeg') center/cover no-repeat;
+    }
+    .hero-inner{position:relative;z-index:1;max-width:var(--container);width:100%;padding:26px 16px}
     .hero h1{font-size:clamp(26px,4.2vw,46px);font-weight:800;text-shadow:0 6px 28px rgba(0,0,0,.45);margin:0 0 10px}
     .hero p{max-width:980px;margin:0 auto;color:#e6f2ef}
     .badges{display:flex;gap:8px;justify-content:center;margin-bottom:12px;flex-wrap:wrap}
     .badge{padding:6px 10px;background:#ffffff22;border:1px solid #ffffff55;border-radius:999px;font-weight:700;backdrop-filter:blur(6px)}
+    .back-home{display:inline-flex;align-items:center;gap:8px;margin-bottom:10px;padding:6px 12px;border-radius:999px;background:#ffffffcc;color:#0f172a;border:1px solid #e2e8f0;text-decoration:none;font-weight:800;backdrop-filter: blur(6px)}
+    .back-home:hover{background:#fff}
 
     /* Layout & cards */
     .wrap{max-width:1200px;margin:auto;padding:34px 16px}
@@ -66,7 +107,7 @@
     th{white-space:nowrap;background:#f7fbf8;color:#2b3a33}
     .note{font-style:italic;color:#9a3412}
 
-    /* Footer with logo */
+    /* Footer */
     .site-footer{background:#0f172a;color:#cbd5e1;margin-top:24px}
     .site-footer a{color:#e2e8f0;text-decoration:none}
     .site-footer a:hover{color:#fff;text-decoration:underline}
@@ -84,19 +125,47 @@
 </head>
 <body>
 
-  <!-- Language Switcher -->
-  <div class="lang-fab" role="group" aria-label="Language switcher">
-    <button class="lang-btn" data-lang="th" aria-pressed="true" title="ภาษาไทย">
-      <img class="flag" src="https://flagcdn.com/24x18/th.png" srcset="https://flagcdn.com/48x36/th.png 2x" alt="TH"><span>ไทย</span>
-    </button>
-    <button class="lang-btn" data-lang="en" aria-pressed="false" title="English">
-      <img class="flag" src="https://flagcdn.com/24x18/gb.png" srcset="https://flagcdn.com/48x36/gb.png 2x" alt="EN"><span>EN</span>
-    </button>
-  </div>
+  <!-- ===== Header (MATCH TEMPLATE) ===== -->
+  <header class="site-header" id="siteHeader" role="banner" aria-label="Site header">
+    <div class="header-inner">
+      <a class="brand" href="/" aria-label="Baume Chemical">
+        <span class="brand-logo" aria-hidden="true"></span>
+        <span class="brand-name">Baume Chemical</span>
+      </a>
+
+      <div class="header-right">
+        <nav id="primary-nav" class="primary-nav" aria-label="Primary" aria-hidden="true">
+          <ul class="menu">
+            <li><a href="/index.html" class="nav-link">Home</a></li>
+            <li><a href="/about-us.html" class="nav-link">About us</a></li>
+            <li><a href="/products.html" class="nav-link">Products</a></li>
+            <li><a href="/contact-us.html" class="nav-link">Contact Us</a></li>
+          </ul>
+        </nav>
+
+        <!-- Header language switch -->
+        <div class="lang-switch" role="group" aria-label="Language switcher">
+          <button class="lang-btn" data-lang="th" aria-pressed="true" title="ภาษาไทย">
+            <img class="flag" src="https://flagcdn.com/24x18/th.png" srcset="https://flagcdn.com/48x36/th.png 2x" alt="TH"><span>ไทย</span>
+          </button>
+          <button class="lang-btn" data-lang="en" aria-pressed="false" title="English">
+            <img class="flag" src="https://flagcdn.com/24x18/gb.png" srcset="https://flagcdn.com/48x36/gb.png 2x" alt="EN"><span>EN</span>
+          </button>
+        </div>
+
+        <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="primary-nav">
+          <span class="bar" aria-hidden="true"></span>
+        </button>
+      </div>
+    </div>
+  </header>
+  <div class="menu-scrim" hidden></div>
 
   <!-- HEADER / HERO -->
-  <section class="hero">
-    <div class="wrap" style="padding:22px 16px">
+  <section class="hero" aria-label="Chromate 5006 hero">
+    <div class="hero-inner">
+      <a class="back-home" href="/index.html" onclick="if(history.length>1){history.back();return false;}" data-i18n-key="back_home">← กลับหน้าแรก</a>
+
       <div class="badges">
         <span class="badge" data-i18n-key="badge1">Hexavalent (Cr(VI))</span>
         <span class="badge" data-i18n-key="badge2">Iridescent Finish</span>
@@ -242,8 +311,59 @@
     </div>
   </footer>
 
-  <!-- i18n -->
+  <!-- ===== JS: header glass, mobile nav (scrim+lock), i18n sync ===== -->
   <script>
+    // Header glass + set CSS var
+    (function(){
+      const header = document.getElementById('siteHeader');
+      const setH = ()=>{ const h = header ? Math.round(header.getBoundingClientRect().height) : 64; document.documentElement.style.setProperty('--header-h', h + 'px'); };
+      const onScroll = ()=> header && header.classList.toggle('scrolled', (window.scrollY||0) > 10);
+      window.addEventListener('load', setH, {once:true});
+      window.addEventListener('resize', setH);
+      window.addEventListener('scroll', onScroll, {passive:true});
+      setH(); onScroll();
+    })();
+
+    // Mobile nav: scrim + body lock + highlight current
+    (function(){
+      const header = document.getElementById('siteHeader');
+      const toggle = header?.querySelector('.nav-toggle');
+      const nav = document.getElementById('primary-nav');
+      const scrim = document.querySelector('.menu-scrim');
+      if(toggle && nav && scrim){
+        let lockY = 0;
+        function openMenu(v){
+          header.classList.toggle('open', v);
+          toggle.setAttribute('aria-expanded', String(v));
+          nav.setAttribute('aria-hidden', String(!v));
+          v ? scrim.removeAttribute('hidden') : scrim.setAttribute('hidden','');
+          if(v){
+            lockY = window.scrollY; document.body.classList.add('no-scroll'); document.body.style.top = `-${lockY}px`;
+            const first = nav.querySelector('a,button,[tabindex]:not([tabindex="-1"])'); first && first.focus?.({preventScroll:true});
+          }else{
+            document.body.classList.remove('no-scroll'); document.body.style.top=''; window.scrollTo(0, lockY); toggle.focus?.({preventScroll:true});
+          }
+        }
+        toggle.addEventListener('click', ()=> openMenu(!header.classList.contains('open')));
+        scrim.addEventListener('click', ()=> openMenu(false));
+        document.addEventListener('keydown', (e)=>{ if(e.key==='Escape' && header.classList.contains('open')) openMenu(false); });
+        window.addEventListener('resize', ()=>{ if (window.innerWidth > 920 && header.classList.contains('open')) openMenu(false); }, {passive:true});
+        header.querySelectorAll('.menu a').forEach(a => a.addEventListener('click', ()=> openMenu(false)));
+      }
+      // highlight current page / Products when under /products
+      try{
+        const here = location.pathname.replace(/\/+$/,'');
+        document.querySelectorAll('.menu a').forEach(a=>{
+          const path = new URL(a.getAttribute('href'), location.origin).pathname.replace(/\/+$/,'');
+          const isProducts = here.startsWith('/products');
+          if (isProducts && /\/products(\.html)?$/.test(path)) a.setAttribute('aria-current','page');
+          else if (here === path) a.setAttribute('aria-current','page');
+          else a.removeAttribute('aria-current');
+        });
+      }catch(e){}
+    })();
+
+    // i18n (header + FAB synced) + title update
     const I18N = {
       th:{
         meta_title:"Chromate 5006 • สีรุ้งน้ำ โครม 6 | Baume Chemical",
@@ -276,7 +396,9 @@
         t2:"ฝ้า/คราบขาว: ล้างน้ำให้เพียงพอ (2–3 ครั้ง); ลดความเข้มข้นให้อยู่ในช่วงแนะนำ",
         t3:"ฟิล์มล่อน/ยึดเกาะไม่ดี: ปรับปรุงการเตรียมผิว; คุมความเข้มข้นและ pH ให้ตามสเปก",
         t4:"ทนกัดกร่อนไม่ดี: ฟิล์มบาง → เพิ่มเวลา/ความเข้มข้น; พิจารณา Top Coat/Sealer",
-        safety:"**ความปลอดภัย (Cr(VI))**: ใช้ PPE เหมาะสม ระบายอากาศ และบำบัดของเสียตามกฎหมาย"
+        safety:"**ความปลอดภัย (Cr(VI))**: ใช้ PPE เหมาะสม ระบายอากาศ และบำบัดของเสียตามกฎหมาย",
+
+        back_home:"← กลับหน้าแรก"
       },
       en:{
         meta_title:"Chromate 5006 • Iridescent Hex-Chrome | Baume Chemical",
@@ -309,12 +431,14 @@
         t2:"Haze/white film: increase rinses (2–3); reduce concentration to spec.",
         t3:"Peeling/poor adhesion: improve surface prep; hold concentration & pH in spec.",
         t4:"Poor corrosion resistance: film too thin → increase time/conc; consider top coat/sealer.",
-        safety:"**Safety (Cr(VI))**: Use proper PPE, ensure ventilation, and treat waste per regulations."
+        safety:"**Safety (Cr(VI))**: Use proper PPE, ensure ventilation, and treat waste per regulations.",
+
+        back_home:"← Back to Home"
       }
     };
 
     const els = {
-      langBtns: () => document.querySelectorAll('.lang-fab .lang-btn'),
+      langBtns: () => document.querySelectorAll('.lang-btn'), // header + FAB
       translatables: () => document.querySelectorAll('[data-i18n-key]')
     };
 
@@ -322,7 +446,7 @@
       const L = (lang==='en') ? 'en' : 'th';
       document.documentElement.lang = L;
       const titleEl = document.querySelector('title[data-i18n-key="meta_title"]');
-      if(titleEl && I18N[L].meta_title) titleEl.textContent = I18N[L].meta_title;
+      if(titleEl && I18N[L].meta_title){ titleEl.textContent = I18N[L].meta_title; document.title = I18N[L].meta_title; }
 
       els.langBtns().forEach(btn => btn.setAttribute('aria-pressed', String(btn.dataset.lang === L)));
       els.translatables().forEach(node=>{
